Preliminary changes to portfolio

--- a/pages/research.html
+++ b/pages/research.html
@@ -153,6 +153,21 @@ Licence URI: http://www.os-templates.com/template-terms
       <img src = "../images/textoverlap_small.jpeg" alt="" /></a>
     </div>
     
+<!--
+      <div id="featured">
+        <p> Examples of text overlap networks of two authors, A and B.  Nodes represent
+        articles written by each of the authors, and are arranged chronologically (earlier
+        articles at the bottom; later articles at the top).   Uncolored nodes are texts 
+        coauthored by the author in question, and gray nodes are texts by other authors.
+        Edges represent instances where later articles copy text from earlier articles.  
+        Blue-colored edges represent cases
+        where authors re-use text from their own works.  Green-colored edges represent
+        cases where authors re-use text from others with citation.  Red-colored edges 
+        represent cases where authors re-use text from others without citation.
+        </p>
+      </div>
+-->
+    
     <p>The arXiv is an online repository of scientific articles available publicly at 
     <a href="http://www.arxiv.org"><b>arxiv.org</b></a>. At the time when this project 
     began (Summer 2012), administrators of the arXiv had become increasingly aware of 
