--- a/pages/teaching.html
+++ b/pages/teaching.html
@@ -51,8 +51,12 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="container">
     <div id ="content">
 <!-- ### Teaching portfolio -->
-      <h1> <b> Teaching Portfolio </b> </h1>
-      <p>(Coming soon)</p>
+      <h1><a href="portfolio/index.html"><b>Teaching Portfolio</b></a></h1>
+      <p>I use my teaching portfolio to document and reflect upon my past experiences
+      with teaching.  My portfolio includes my own teaching philosophy statement as
+      well as annotations on previous course design choices that show how my skills
+      as an instructor have developed over time.</p>
+      <p> Find my teaching portfolio <a href="portfolio/index.html"><b>here &raquo;</b></a></p>
     </div>    
 <!-- ### Here's a column -->
     <div id="column">
