Finished updating teaching portfolio

--- a/pages/greprep.html
+++ b/pages/greprep.html
@@ -40,28 +40,20 @@ Licence URI: http://www.os-templates.com/template-terms
             <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
         </li>
-        <li><a class="active" href="teaching.html">Teaching</a></li>
+        <li><a class="active" href="teaching.html">Teaching</a>
+          <ul>
+            <li><a href="portfolio/index.html">Teaching Portfolio</a></li>
+            <li><a href="greprep.html">Physics GRE Prep</a></li>
+          </ul>
         <li><a href="other.html">Other</a></li>
     </div>
-  </div>
-</div>
-
-<div class="wrapper col2">
-  <div id="breadcrumb">
-    <ul>
-      <li class="first"><a href="../index.html">Home</a></li>
-      <li>&#187;</li>
-      <li><a href="teaching.html">Teaching</a></li>
-      <li>&#187;</li>
-      <li class="current"><a href="greprep.html">Physics GRE Prep</a></li>
-    </ul>
   </div>
 </div>
 
 <div class="wrapper col4">
   <div id="container">
     <div id ="content">
-      <h1> <b> Preparing for the Physics GRE </b> </h1>      
+      <h1>Preparing for the Physics GRE</h1>      
       <p> If you're an undergraduate and are interested in applying to graduate programs 
       in the field of physics, you'll have to take the 
       <a href = "http://www.ets.org/gre/subject/about/content/physics" target="_blank">  <b>Physics GRE 
@@ -78,7 +70,8 @@ Licence URI: http://www.os-templates.com/template-terms
 	  physics, but they should give you a reasonable sense of the scope of material the test
 	  requires, as well as the types of questions asked.</p>
 	  
-	  <h2> <b> How to Study </b> </h2>
+	  <hr>
+	  <h2>How to Study</h2>
 	  <p> The Physics GRE is very, very different from any other test that you have taken
 	  as an undergrad.  It is so different that really the only way to prepare is to take
 	  some practice tests - a few of these are available online, and 
@@ -95,7 +88,8 @@ Licence URI: http://www.os-templates.com/template-terms
 	  Above all, practice solving as many real test problems as you can find - my notes
 	  will include example problems as well as discussions about how to solve them. </p>
 	  
-	  <h2> <b> Review Notes </b> </h2>
+	  <hr>
+	  <h2>Review Notes</h2>
 	  <p>
 	    <ul>
 	      <li> <a href = "../GRE_prep_slides/introduction.pdf" target="_blank"><b>
@@ -129,7 +123,8 @@ Licence URI: http://www.os-templates.com/template-terms
 	    </ul>
 	  </p>
 
-	  <h2><b>Additional Resources</b></h2>
+	  <hr>
+	  <h2>Additional Resources</h2>
 	  <p> <a href = "http://www.ets.org/gre/subject/about/content/physics" target="_blank"> <b> 
 	  The official ETS website</b> </a> contains a lot of basic information about the 
 	  material covered on the Physics GRE as well as the format of the test.</p>
@@ -142,6 +137,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	  <p> Four practice exams is a lot, but if you want <i>even more</i> practice,
 	  <a href="http://www.physicsgreprep.com" target="_blank"><b>Conquering the Physics GRE
 	  </b></a> has some additional practice tests and review questions.</p>
+	  <hr>
 	  <h2><b>Best of luck with the exam!</b></h2>
 	  
     </div>    
