--- a/pages/other.html
+++ b/pages/other.html
@@ -39,7 +39,12 @@ Licence URI: http://www.os-templates.com/template-terms
             <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
         </li>
-        <li><a href="teaching.html">Teaching</a></li>
+        <li><a href="teaching.html">Teaching</a>
+          <ul>
+            <li><a href="portfolio/index.html">Teaching Portfolio</a></li>
+            <li><a href="greprep.html">Physics GRE Prep</a></li>
+          </ul>
+        </li>
         <li><a class="active" href="other.html">Other</a></li>
     </div>
   </div>
@@ -49,14 +54,15 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper col4">
   <div id="container">
     <div id="content">
-	  <h1 id="sideprojects"><b>Data Projects</b></h1>
-	  <p><b>Do Movie Ratings Matter?</b></p>
-	  <p><b>Price Distributions of Trading Cards</b></p>
-	  <p><b>Re-evaluating the Points Values of Scrabble Tiles</b></p>
+	  <h1 id="sideprojects">Data Projects</h1>
+	  <a><h2>Do Movie Ratings Matter?</h2></a>
+	  <a><h2>Price Distributions of Trading Cards</h2></a>
+	  <a><h2>Re-evaluating the Points Values of Scrabble Tiles</h2></a>
+	  <hr>
 	</div>
     <div id="content">
       <h1><b>Notable Eclectic Ephemera</b></h1>
-      <p><b>Axolotls</b></p>
+      <a><h2>Axolotls</h2></a>
       <p>The axolotl (<i>Ambystoma mexicana</i>) is a neotenic salamander perhaps best 
       known for its distinctive mane of feathery external gills.  "Neoteny" refers to a 
       lifecycle in which an animal undergoes a complete reproductive cycle without ever 
@@ -65,7 +71,7 @@ Licence URI: http://www.os-templates.com/template-terms
       <p> Axolotls make wonderful pets.  Meet Kimiko (albino) and Huxley (wild type) 
       <a href="axolotls.html"><b>here</b></a>.</p>
       <p> </p>
-      <p><b>University of Chicago Scavenger Hunt</b></p>
+      <a><h2>University of Chicago Scavenger Hunt</h2></a>
       <p>I am a proud alumnus ("Judge emeritus") of the organization that runs the 
       <a href="http://scavhunt.uchicago.edu/">University of Chicago Scavenger Hunt</a>.  
       The University of Chicago Scavenger Hunt ("Scav") is an annual event that lasts four 
