--- a/pages/teaching.html
+++ b/pages/teaching.html
@@ -40,7 +40,12 @@ Licence URI: http://www.os-templates.com/template-terms
             <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
         </li>
-        <li><a class="active" href="teaching.html">Teaching</a></li>
+        <li><a href="teaching.html">Teaching</a>
+          <ul>
+            <li><a href="portfolio/index.html">Teaching Portfolio</a></li>
+            <li><a href="greprep.html">Physics GRE Prep</a></li>
+          </ul>
+        </li>
         <li><a href="other.html">Other</a></li>
     </div>
   </div>
@@ -51,7 +56,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="container">
     <div id ="content">
 <!-- ### Teaching portfolio -->
-      <h1><a href="portfolio/index.html"><b>Teaching Portfolio</b></a></h1>
+      <h1 id="portfolio"><a href="portfolio/index.html">Teaching Portfolio</a></h1>
       <p>I use my teaching portfolio to document and reflect upon my past experiences
       with teaching.  My portfolio includes my own teaching philosophy statement as
       well as annotations on previous course design choices that show how my skills
@@ -71,7 +76,8 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
 <!-- ### GRE Stuff -->
     <div id="content">
-      <h1> <a href="greprep.html"> <b> Physics GRE Subject Test Prep </b> </a> </h1>
+      <hr>
+      <h1 id="greprep"> <a href="greprep.html"> Physics GRE Subject Test Prep </a> </h1>
       <p>For the past three years, I have organized and taught a short preparatory 
       course on the Physics GRE Subject Test.  The course is intended for third- or 
       fourth-year undergraduates who are interested in applying for graduate school in 
@@ -82,7 +88,8 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
 <!-- ### CV: past teaching assistantships -->
     <div id="content">
-      <h1><b>Teaching Assistantships</b></h1>
+      <hr>
+      <h1>Teaching Assistantships</h1>
       <p> I have worked as a teaching assistant for a number of physics courses at 
       Cornell University: 
       <ul>
