Fixed broken links from previous commit

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ Licence URI: http://www.os-templates.com/template-terms
               <li><a href="pages/research.html#structure">Structural Analysis of Networks</a></li>
             </ul>
           </li>
-		  <li><a href="../teaching.html">Teaching</a>
+		  <li><a href="pages/teaching.html">Teaching</a>
 			<ul>
-			  <li><a href="../portfolio/index.html">Teaching Portfolio</a></li>
-			  <li><a href="../greprep.html">Physics GRE Prep</a></li>
+			  <li><a href="pages/portfolio/index.html">Teaching Portfolio</a></li>
+			  <li><a href="pages/greprep.html">Physics GRE Prep</a></li>
 			</ul>
           </li>
           <li><a href="pages/other.html">Other</a></li>
