--- a/pages/research.html
+++ b/pages/research.html
@@ -40,8 +40,8 @@ Licence URI: http://www.os-templates.com/template-terms
         </li>
         <li><a href="teaching.html">Teaching</a>
           <ul>
-            <li><a href="teaching.html#portfolio">Teaching Portfolio</a></li>
-            <li><a href="teaching.html#greprep">Physics GRE Prep</a></li>
+            <li><a href="portfolio/index.html">Teaching Portfolio</a></li>
+            <li><a href="greprep.html">Physics GRE Prep</a></li>
           </ul>
         </li>
         <li><a href="other.html">Other</a></li>
