--- a/pages/teaching.html
+++ b/pages/teaching.html
@@ -40,7 +40,7 @@ Licence URI: http://www.os-templates.com/template-terms
             <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
         </li>
-        <li><a href="teaching.html">Teaching</a>
+        <li><a class="active" href="teaching.html">Teaching</a>
           <ul>
             <li><a href="portfolio/index.html">Teaching Portfolio</a></li>
             <li><a href="greprep.html">Physics GRE Prep</a></li>
