Added Industry CV

--- a/pages/other.html
+++ b/pages/other.html
@@ -61,7 +61,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	  <hr>
 	</div>
     <div id="content">
-      <h1><b>Notable Eclectic Ephemera</b></h1>
+      <h1>Notable Eclectic Ephemera<</h1>
       <a><h2>Axolotls</h2></a>
       <p>The axolotl (<i>Ambystoma mexicana</i>) is a neotenic salamander perhaps best 
       known for its distinctive mane of feathery external gills.  "Neoteny" refers to a 
