Added Lightning Presentation, updated CSSS ArXiv research section to include new image

--- a/pages/research.html
+++ b/pages/research.html
@@ -115,7 +115,9 @@ Licence URI: http://www.os-templates.com/template-terms
 
     <a><h2>Network Assembly of Scientific Collaborations</h2></a>
     <div class = "imgholder">
-      <img src = "../images/arxiv_assembly_small.jpeg" alt="" />
+      <a href ="../images/csss_visualizations.pdf"> 
+        <img src = "../images/arxiv_assembly_small.jpeg" alt="" />
+      </a>
     </div>    
     <p> How do scientific fields develop?  How does the underlying social structure of
     scientific research change as a little-known idea or discovery grows into a 
@@ -150,6 +152,7 @@ Licence URI: http://www.os-templates.com/template-terms
     target="_blank">2015 International Conference on Computational Social Science</a>.
     (Manuscript currently in preparation.)
     </p>
+    <p>Forthcoming article is currently under review</p>
 
 	<hr>
     <a><h2>Measuring Text Reuse Patterns in Articles on arXiv.org</h2></a>
