Fixed Link to Atomic Physics Slides

--- a/pages/greprep.html
+++ b/pages/greprep.html
@@ -110,7 +110,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		    Waves</b></a>- Diffraction and Interference Patterns</li>
 		  <li> <a href = "../GRE_prep_slides/circuits.pdf" target="_blank"><b>
 		    Circuit Analysis</b></a></li>
-		  <li> <a href = "../GRE_prep_slides/atomic.pdf" target="_blank"><b>
+		  <li> <a href = "../GRE_prep_slides/atomic_physics.pdf" target="_blank"><b>
 		    Atomic Physics</b></a></li>
 		  <li> <a href = "../GRE_prep_slides/particle.pdf" target="_blank"><b>
 		    Particle Physics</b></a></li>
