--- a/pages/greprep.html
+++ b/pages/greprep.html
@@ -156,13 +156,23 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id ="content">
       <h1> </h1>
       Did you find these materials useful?  
-      <b> 
-        <script language="JavaScript">
-        var username = "dtc65";
-        var hostname = "cornell.edu";
-        var linktext = "Send me a message about it";
-        document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script>
-    </b>! <!--  Or buy me a cup of coffee! -->
+      <p>
+        <b> 
+          <script language="JavaScript">
+          var username = "dtc65";
+          var hostname = "cornell.edu";
+          var linktext = "Send me a message about it!";
+          document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script>
+        </b>
+      </p><p>
+        Or, you can buy me a cup of coffee!
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="PBB7GG63QBQ9L">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+      </p>
     </div>
 
     <div class="clear"></div>
