Partway through editing landing page

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ Licence URI: http://www.os-templates.com/template-terms
       <div id="content">
         <h1>Research Interests</h1>
         <p>I am a postdoctoral fellow at the University of Washington, appointed
-          within the Department of Health Metrics Sciences and affiliated with
-          the Institute for Health Metrics and Evaluation. My academic interest is
-          applying mathematical models to problems related to public health and
-          health policy.  Currently, I build computational tools to assist
+          within the <a href="https://depts.washington.edu/healthms/">Department of Health Metrics Sciences</a>
+          and affiliated with the <a href="http://www.healthdata.org">Institute for Health Metrics and Evaluation</a>.
+          My academic interest is applying mathematical models to problems related to
+          public health and health policy.  Currently, I build computational tools to assist
           policy makers with planning strategic decisions for eliminating and
           controlling malaria.  I work with David L. Smith's research team at IHME.
         </p>
@@ -100,8 +100,11 @@ Licence URI: http://www.os-templates.com/template-terms
         <p>
           <ul>
             <li><b>Bioko Island Malaria Elimination Program</b></li>
+
             <li><b>Characterizing Spatial Uncertainty for Policy</b></li>
-            <li><b>Human Mobility Models</b></li>
+
+            <li><b>Human Travel Patterns</b></li>
+
           </ul>
         </p>
         <h1>Previous Projects</h1>
@@ -113,8 +116,38 @@ Licence URI: http://www.os-templates.com/template-terms
         <p>
           <ul>
             <li><b>Infectious Disease Dynamics on Networks</b></li>
+            I studied how contact network structure changes critical community
+            size for models of endemic disease, using simulation models and analytical
+            techniques to show how degree heterogeneity could affect how long
+            endemic disease is able to persist.
+            I built software in <a href="https://github.com/dtcitron/sirs_gsp">Python</a>
+            and in <a href="https://github.com/dtcitron/CTDE">Julia</a> as
+            simulation tools. From the simulations I was able to show mathematics
+            I accompanied the simulations with moment closure analysis of an
+            analogous Markov Chain model.
+            <a href="images/DTCitron_netsci_slides.pdf">Slides from NetSci 2016</a>.
             <li><b>Network Assembly of Scientific Communities</b></li>
+            I combined natural language processing techniques with social
+            network analysis techniques to explore how scientific collaboration
+            networks form and assemble over time.  I used topic modeling to sort
+            the scientific articles contained in two corpora -- the <a href="https://arxiv.org">arXiv</a>
+            and the <a href="http://wokinfo.com">Web of Science</a> -- according
+            to their scientific subject matter. I then analyzed how the structure
+            of the co-authorship networks corresponding to each scientific sub-community
+            evolved over time. See our published article <a href="https://arxiv.org/abs/1801.04898">here</a>.
+            This project started as part of a collaboration during the 2015
+            Complex Systems Summer School at the <a href="https://www.santafe.edu">Santa Fe Institute</a>.
             <li><b>Measuring Plagiarism on arXiv</b></li>
+            I used social network analysis methods to explore how common it is for
+            authors who submit articles to the arXiv to re-use text from previous
+            publications.  This project was motivated by a series of occurrences
+            of fraudulent re-use of text previously published scientific publications.
+            By analyzing the text overlaps between each pair of articles in the
+            arXiv, we were able to show that habitual text re-use is restricted to
+            a minority of offending authors, and that there was a negative correlation
+            between the reused text contained in a paper and the number of citations
+            it received.
+            See our published article <a href="https://arxiv.org/abs/1412.2716">here</a>.
           </ul>
         </p>
 <!--        <p> My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">
@@ -135,7 +168,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <p>In 2015 I attended the Complex Systems Summer School at the Santa Fe Institute.
         In 2012 I was awarded a National Science Foundation GRFP Fellowship.</p>
         <p>Read more about my research projects <a href = "pages/research.html"><b>here &raquo;</b></a>. </p>
--->>
+-->
 		<hr>
         <h2>Code for Simulations</h2>
         <p class="readmore">I am committed to sharing any and all research-related code.
